--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>React Essentials V2</title>
   </head>
   <body>
+    <header>
+      <img
+        src="game-logo.png"
+        alt="Hand drawn image of tic tac toe game board."
+      />
+      <h1>Tic Tac Toe</h1>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
